[project]
name = "my-agent"
version = "0.1.0"
description = "개인 에이전트 프로젝트 스캐폴드"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Repository = "https://github.com/yechan-00/my_agent"

[project.scripts]
my-agent = "my_agent.main:main"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_agent"]
